kubernetes/apps/base/observability/jaeger/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLOUDFLARED_INGRESS_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  parentRefs:
    - name: cilium-gateway-main
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - 'cilium-jaeger.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: jaeger-query
          port: 16686
          weight: 100
